# meson-cpp-skel

./: .gitignore  LICENSE  README.md  cross_file.txt  meson.build  meson_options.txt
lib/include/: Library.h
lib/src/: Library.cpp
lib/tests/: Test_MakeObject.cpp  Test_TestClass.cpp  main.cpp
src/: main.cpp
